5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4186/executions/1667_2974.log
== TEST (2019-04-16 16:47:38) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 0,001/1000

if 
-- ERROR:
File "XXXX", line 5
    x= 0,001/1000
           ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:47:40) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 0,001/1000

if 
-- EXECUTION TIME:
0.159369
-- ERROR:
  File "/home/codebench/codes/1667/2974/main.py", line 5
    x= 0,001/1000
           ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:52) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 0,001/1000

if 
-- ERROR:
File "XXXX", line 5
    x= 0,001/1000
           ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:50:08) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000

if 
-- ERROR:
File "XXXX", line 7
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:31) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000

-- EXECUTION TIME:
0.12432
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:

-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:

-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:50:31) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000

-- ERROR:
File "XXXX", line 7
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:49) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000

if ()
-- ERROR:
File "XXXX", line 7
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:29) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000

if ()
-- ERROR:
File "XXXX", line 7
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:29) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000

if ()
-- ERROR:
File "XXXX", line 7
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:29) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000

if ()
-- ERROR:
File "XXXX", line 7
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:29) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000

if ()
-- ERROR:
File "XXXX", line 7
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:29) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000

if ()
-- ERROR:
File "XXXX", line 7
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:29) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000

if ()
-- ERROR:
File "XXXX", line 7
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:29) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000

if ()
-- ERROR:
File "XXXX", line 7
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:29) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000

if ()
-- ERROR:
File "XXXX", line 7
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:29) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000

if ()
-- ERROR:
File "XXXX", line 7
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:40) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000

if ()
-- ERROR:
File "XXXX", line 7
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:48) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000

if ()
-- ERROR:
File "XXXX", line 7
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:55) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000


-- ERROR:
File "XXXX", line 7
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:24) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000
 print(x)

-- ERROR:
File "XXXX", line 6
    print(x)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:30) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000
 print (x)

-- ERROR:
File "XXXX", line 6
    print (x)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:35) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000
  print (x)

-- ERROR:
File "XXXX", line 6
    print (x)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:40) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000
  print (x)

-- ERROR:
File "XXXX", line 6
    print (x)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:40) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000
  print (x)

-- ERROR:
File "XXXX", line 6
    print (x)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:49) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000
  print (x)

-- ERROR:
File "XXXX", line 6
    print (x)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:55) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000
print (x)

-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:01) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000
print (x)

-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:54:03) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000
print (x)

-- EXECUTION TIME:
0.21511
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
0.5
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
0.5
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
0.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:04) 
-- CODE:
var1= float(input("Quant de acai :"))
var2= float(input("Quant salgados :"))
var3= float(input("Valor pago em dinheiro :"))

x= 1000/2000
print (x)

-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
